# ppt-translator

./: README.md
ppt-translator/: .gitignore  pyproject.toml  translator_run_log.txt
ppt-translator/src/ppt_translator/: __init__.py
